[package]
name = "seismon"
version = "0.2.0"
authors = ["Eira Fransham <eira.fransham@gmail.com>", "Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2024"
resolver = "2"

[workspace]
members = [
    "crates/seismon-utils",
    "crates/lined",
    "crates/bevy_mod_mdl",
    "crates/bevy_mod_pakfile",
    "crates/bevy_mod_assimp",
]

[workspace.package]
# Needs to be licensed under GPL to be compatible with Quake 1's license (since it was used
# as reference for many functions in the server).
license = "GPL-2.0"
homepage = "https://github.com/eira-fransham/seismon"
repository = "https://github.com/eira-fransham/seismon"

[workspace.dependencies]
seismon-utils = { path = "crates/seismon-utils" }
bevy_mod_mdl = { path = "crates/bevy_mod_mdl" }
bevy_mod_assimp = { path = "crates/bevy_mod_assimp" }

bevy = { version = "0.17"}
bevy_asset = { version = "0.17" }
bevy_app = { version = "0.17" }
bevy_camera = { version = "0.17" }
bevy_color = { version = "0.17" }
bevy_ecs = { version = "0.17" }
bevy_image = { version = "0.17" }
bevy_log = { version = "0.17" }
bevy_tasks = { version = "0.17" }
bevy_transform = { version = "0.17" }
bevy_math = { version = "0.17", features = ["serialize", "bevy_reflect"] }
bevy_mesh = { version = "0.17" }
bevy_reflect = { version = "0.17", features = ["glam"] }
bevy_render = { version = "0.17" }
bevy_pbr = { version = "0.17" }
bevy_scene = { version = "0.17" }

anyhow = "1.0"
asset-importer = { version = "0.4", features = ["build-assimp"] }
beef = "0.5"
bitflags = "2.4"
byteorder = "1.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "color"] }
enumflags2 = "0.7"
futures = "0.3.5"
hashbrown = { version = "0.15", features = ["serde"] }
itertools = "0.14"
memmap2 = "0.9"
nom = "7.1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde-lexpr = { git = "https://github.com/eira-fransham/lexpr-rs.git" }
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.8", features = ["unstable-provider-api"] }
strip-ansi-escapes = "0.2"
termion = "4.0"
thiserror = "1.0"
tokio = "1.47"
unicode-width = "0.2"

[dependencies]
lined = { path = "crates/lined" }
seismon-utils.workspace = true
bevy_mod_pakfile = { path = "crates/bevy_mod_pakfile" }
bevy_mod_mdl.workspace = true
bevy_mod_assimp.workspace = true
bevy_trenchbroom = { path = "../bevy_trenchbroom", features = ["bsp"] }

bevy.workspace = true
beef.workspace = true
bitflags.workspace = true
byteorder.workspace = true
clap.workspace = true
chrono.workspace = true
futures.workspace = true
hashbrown.workspace = true
itertools.workspace = true
memmap2.workspace = true
nom.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde-lexpr.workspace = true
serde.workspace = true
snafu.workspace = true
thiserror.workspace = true

arrayvec = "0.7"
bevy_capture = { version = "0.4", features = ["gif", "mp4_openh264"], optional = true }
bevy_seedling = { version = "0.6.0-rc.1", git = "https://github.com/CorvusPrudens/bevy_seedling.git", rev = "5e11f13" }
bevy-inspector-egui = "0.34"
bitvec = "1.0"
bumpalo = "3.4"
bytemuck = "1.14"
dashmap = "5.5"
failure = "0.1.8"
hashers = "1.0"
im = "15.1.0"
image = "0.25"
imstr = "0.2"
indexmap = "2.9"
parking_lot = "0.12"
pest = "2.8"
pest_derive = "2.8"
qbsp = { version = "0.6", features = ["bevy_reflect", "serde"] }
rand = { version = "0.9", features = ["small_rng", "thread_rng"] }
slab = "0.4"
smol_str = "0.2"
strum = "0.26"
strum_macros = "0.26"
uluru = "3"
uuid = "1.12"
wgpu = { version = "26.0", features = ["spirv", "vulkan-portability"] }
winit = "0.29"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
capture = ["dep:bevy_capture"]
dev_tools = ["bevy/bevy_dev_tools"]

[profile.release-lto]
inherits = "release"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package.bevy]
opt-level = 3

[patch.crates-io]
bevy = { path = "../bevy"}

bevy_a11y = { path = "../bevy/crates/bevy_a11y" }
bevy_android = { path = "../bevy/crates/bevy_android" }
bevy_animation = { path = "../bevy/crates/bevy_animation" }
bevy_animation_macros = { path = "../bevy/crates/bevy_animation/macros" }
bevy_anti_alias = { path = "../bevy/crates/bevy_anti_alias" }
bevy_app = { path = "../bevy/crates/bevy_app" }
bevy_asset = { path = "../bevy/crates/bevy_asset" }
bevy_asset_macros = { path = "../bevy/crates/bevy_asset/macros" }
bevy_audio = { path = "../bevy/crates/bevy_audio" }
bevy_camera = { path = "../bevy/crates/bevy_camera" }
bevy_color = { path = "../bevy/crates/bevy_color" }
bevy_core_pipeline = { path = "../bevy/crates/bevy_core_pipeline" }
bevy_derive = { path = "../bevy/crates/bevy_derive" }
bevy_dev_tools = { path = "../bevy/crates/bevy_dev_tools" }
bevy_diagnostic = { path = "../bevy/crates/bevy_diagnostic" }
bevy_dylib = { path = "../bevy/crates/bevy_dylib" }
bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
bevy_ecs_macros = { path = "../bevy/crates/bevy_ecs/macros" }
bevy_encase_derive = { path = "../bevy/crates/bevy_encase_derive" }
bevy_gilrs = { path = "../bevy/crates/bevy_gilrs" }
bevy_gizmos = { path = "../bevy/crates/bevy_gizmos" }
bevy_gizmos_macros = { path = "../bevy/crates/bevy_gizmos/macros" }
bevy_gltf = { path = "../bevy/crates/bevy_gltf" }
bevy_image = { path = "../bevy/crates/bevy_image" }
bevy_input = { path = "../bevy/crates/bevy_input" }
bevy_input_focus = { path = "../bevy/crates/bevy_input_focus" }
bevy_internal = { path = "../bevy/crates/bevy_internal" }
bevy_light = { path = "../bevy/crates/bevy_light" }
bevy_log = { path = "../bevy/crates/bevy_log" }
bevy_macro_utils = { path = "../bevy/crates/bevy_macro_utils" }
bevy_math = { path = "../bevy/crates/bevy_math" }
bevy_mesh = { path = "../bevy/crates/bevy_mesh" }
bevy_pbr = { path = "../bevy/crates/bevy_pbr" }
bevy_picking = { path = "../bevy/crates/bevy_picking" }
bevy_platform = { path = "../bevy/crates/bevy_platform" }
bevy_post_process = { path = "../bevy/crates/bevy_post_process" }
bevy_ptr = { path = "../bevy/crates/bevy_ptr" }
bevy_reflect = { path = "../bevy/crates/bevy_reflect" }
bevy_reflect_derive = { path = "../bevy/crates/bevy_reflect/derive" }
bevy_render = { path = "../bevy/crates/bevy_render" }
bevy_render_macros = { path = "../bevy/crates/bevy_render/macros" }
bevy_scene = { path = "../bevy/crates/bevy_scene" }
bevy_shader = { path = "../bevy/crates/bevy_shader" }
bevy_sprite = { path = "../bevy/crates/bevy_sprite" }
bevy_sprite_render = { path = "../bevy/crates/bevy_sprite_render" }
bevy_state = { path = "../bevy/crates/bevy_state" }
bevy_state_macros = { path = "../bevy/crates/bevy_state/macros" }
bevy_tasks = { path = "../bevy/crates/bevy_tasks" }
bevy_text = { path = "../bevy/crates/bevy_text" }
bevy_time = { path = "../bevy/crates/bevy_time" }
bevy_transform = { path = "../bevy/crates/bevy_transform" }
bevy_ui = { path = "../bevy/crates/bevy_ui" }
bevy_ui_render = { path = "../bevy/crates/bevy_ui_render" }
bevy_utils = { path = "../bevy/crates/bevy_utils" }
bevy_window = { path = "../bevy/crates/bevy_window" }
bevy_winit = { path = "../bevy/crates/bevy_winit" }
