[package]
name = "seismon"
version = "0.2.0"
authors = ["Eira Fransham <eira.fransham@gmail.com>", "Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2024"
resolver = "2"

[workspace]
members = [
    "crates/seismon-utils",
    "crates/lined",
    "crates/bevy_mod_mdl",
    "crates/bevy_mod_pakfile",
    "crates/bevy_mod_assimp",
]

[workspace.package]
# Needs to be licensed under GPL to be compatible with Quake 1's license (since it was used
# as reference for many functions in the server).
license = "GPL-2.0"
homepage = "https://github.com/eira-fransham/seismon"
repository = "https://github.com/eira-fransham/seismon"

[workspace.dependencies]
seismon-utils = { path = "crates/seismon-utils" }
bevy_mod_mdl = { path = "crates/bevy_mod_mdl" }
bevy_mod_assimp = { path = "crates/bevy_mod_assimp" }

bevy = { version = "0.17"}
bevy_asset = { version = "0.17" }
bevy_animation = { version = "0.17" }
bevy_app = { version = "0.17" }
bevy_camera = { version = "0.17" }
bevy_color = { version = "0.17" }
bevy_ecs = { version = "0.17" }
bevy_image = { version = "0.17" }
bevy_log = { version = "0.17" }
bevy_tasks = { version = "0.17" }
bevy_transform = { version = "0.17" }
bevy_math = { version = "0.17", features = ["serialize", "bevy_reflect"] }
bevy_mesh = { version = "0.17" }
bevy_reflect = { version = "0.17", features = ["glam"] }
bevy_render = { version = "0.17" }
bevy_pbr = { version = "0.17" }
bevy_scene = { version = "0.17" }

anyhow = "1.0"
asset-importer = { version = "0.4", features = ["build-assimp"] }
beef = "0.5"
bitflags = "2.4"
byteorder = "1.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "color"] }
enumflags2 = "0.7"
futures = "0.3.5"
hashbrown = { version = "0.15", features = ["serde"] }
itertools = "0.14"
memmap2 = "0.9"
nom = "7.1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde-lexpr = { git = "https://github.com/eira-fransham/lexpr-rs.git" }
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.8", features = ["unstable-provider-api"] }
strip-ansi-escapes = "0.2"
termion = "4.0"
thiserror = "1.0"
tokio = "1.47"
unicode-width = "0.2"

[dependencies]
lined = { path = "crates/lined" }
seismon-utils.workspace = true
bevy_mod_pakfile = { path = "crates/bevy_mod_pakfile" }
bevy_mod_mdl.workspace = true
bevy_mod_assimp.workspace = true
bevy_trenchbroom = { git = "https://github.com/eira-fransham/bevy_trenchbroom.git", branch = "each-model-separate-sub-asset", features = ["bsp"] }

bevy.workspace = true
beef.workspace = true
bitflags.workspace = true
byteorder.workspace = true
clap.workspace = true
chrono.workspace = true
futures.workspace = true
hashbrown.workspace = true
itertools.workspace = true
memmap2.workspace = true
nom.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde-lexpr.workspace = true
serde.workspace = true
snafu.workspace = true
thiserror.workspace = true

arrayvec = "0.7"
bevy_capture = { version = "0.4", features = ["gif", "mp4_openh264"], optional = true }
bevy_seedling = { version = "0.6.0-rc.1", git = "https://github.com/CorvusPrudens/bevy_seedling.git", rev = "5e11f13" }
bevy-inspector-egui = "0.34"
bitvec = "1.0"
bumpalo = "3.4"
bytemuck = "1.14"
dashmap = "5.5"
failure = "0.1.8"
hashers = "1.0"
im = "15.1.0"
image = "0.25"
imstr = "0.2"
indexmap = "2.9"
parking_lot = "0.12"
pest = "2.8"
pest_derive = "2.8"
qbsp = { version = "0.6", features = ["bevy_reflect", "serde"] }
rand = { version = "0.9", features = ["small_rng", "thread_rng"] }
slab = "0.4"
smol_str = "0.2"
strum = "0.26"
strum_macros = "0.26"
uluru = "3"
uuid = "1.12"
wgpu = { version = "26.0", features = ["spirv", "vulkan-portability"] }
winit = "0.29"

[features]
default = []
fast-compile = ["bevy/dynamic_linking"]
capture = ["dep:bevy_capture"]
dev_tools = ["bevy/bevy_dev_tools"]

[profile.release-lto]
inherits = "release"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package.bevy]
opt-level = 3

[patch.crates-io]
bevy = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }

bevy_a11y = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_android = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_animation = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_animation_macros = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_anti_alias = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_app = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_asset = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_asset_macros = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_audio = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_camera = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_color = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_core_pipeline = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_derive = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_dev_tools = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_diagnostic = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_dylib = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_ecs = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_ecs_macros = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_encase_derive = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_gilrs = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_gizmos = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_gizmos_macros = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_gltf = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_image = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_input = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_input_focus = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_internal = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_light = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_log = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_macro_utils = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_math = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_mesh = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_pbr = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_picking = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_platform = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_post_process = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_ptr = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_reflect = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_reflect_derive = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_render = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_render_macros = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_scene = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_shader = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_sprite = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_sprite_render = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_state = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_state_macros = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_tasks = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_text = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_time = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_transform = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_ui = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_ui_render = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_utils = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_window = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
bevy_winit = { git = "https://github.com/eira-fransham/bevy.git", branch = "patched-fork" }
