[package]
name = "seismon"
version = "0.2.0"
authors = ["Eira Fransham <eira.fransham@gmail.com>", "Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2024"
resolver = "2"

[workspace]
members = [
    "crates/seismon-utils",
    "crates/lined",
    "crates/bevy_mod_mdl",
    "crates/bevy_mod_pakfile",
    "crates/bevy_mod_assimp",
]

[workspace.package]
# Needs to be licensed under GPL to be compatible with Quake 1's license (since it was used
# as reference for many functions in the server).
license = "GPL-2.0"
homepage = "https://github.com/eira-fransham/seismon"
repository = "https://github.com/eira-fransham/seismon"

[workspace.dependencies]
seismon-utils = { path = "crates/seismon-utils" }
bevy_mod_mdl = { path = "crates/bevy_mod_mdl" }
bevy_mod_assimp = { path = "crates/bevy_mod_assimp" }
bevy_mod_pakfile = { path = "crates/bevy_mod_pakfile" }
lined = { path = "crates/lined" }

bevy = { version = "0.18"}
bevy_asset = { version = "0.18" }
bevy_animation = { version = "0.18" }
bevy_app = { version = "0.18" }
bevy_camera = { version = "0.18" }
bevy_color = { version = "0.18" }
bevy_ecs = { version = "0.18" }
bevy_image = { version = "0.18" }
bevy_log = { version = "0.18" }
bevy_tasks = { version = "0.18" }
bevy_transform = { version = "0.18" }
bevy_time = { version = "0.18" }
bevy_math = { version = "0.18", features = ["serialize", "bevy_reflect"] }
bevy_mesh = { version = "0.18" }
bevy_reflect = { version = "0.18", features = ["glam"] }
bevy_render = { version = "0.18" }
bevy_pbr = { version = "0.18" }
bevy_scene = { version = "0.18" }

anyhow = "1.0"
asset-importer = { version = "0.4", features = ["build-assimp"] }
beef = "0.5"
bevy_materialize = "0.10"
bitflags = "2.4"
byteorder = "1.3"
clap = { version = "4.5", features = ["derive", "color"] }
enumflags2 = "0.7"
futures = "0.3.31"
futures-byteorder = "1.0.1"
hashbrown = { version = "0.15", features = ["serde"] }
itertools = "0.14"
memmap2 = "0.9"
nom = "7.1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde-lexpr = { git = "https://github.com/eira-fransham/lexpr-rs.git" }
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.8" }
strip-ansi-escapes = "0.2"
termion = "4.0"
thiserror = "1.0"
tokio = "1.47"
unicode-width = "0.2"
qbsp = { version = "0.14", features = ["bevy_reflect", "serde"] }

[dependencies]
seismon-utils.workspace = true
bevy_mod_mdl.workspace = true
# bevy_mod_assimp.workspace = true
bevy_trenchbroom = { git = "https://github.com/eira-fransham/bevy_trenchbroom.git", branch = "each-model-separate-sub-asset-bevy-0.18", features = ["bsp"] }
bevy_mod_pakfile.workspace = true
lined.workspace = true

bevy.workspace = true
beef.workspace = true
bitflags.workspace = true
byteorder.workspace = true
clap.workspace = true
futures.workspace = true
hashbrown.workspace = true
itertools.workspace = true
memmap2.workspace = true
nom.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde-lexpr.workspace = true
serde.workspace = true
snafu.workspace = true
thiserror.workspace = true
qbsp = { workspace = true, features = ["bevy_reflect", "serde"] }

arrayvec = "0.7"
bevy_capture = { version = "0.4", features = ["gif", "mp4_openh264"], optional = true }
bevy_seedling = { git = "https://github.com/eira-fransham/bevy_seedling.git", branch = "ignore-already-deleted-entities" }
bevy_mod_scripting = "0.19"
bevy-inspector-egui = "0.36"
bitvec = "1.0"
bumpalo = "3.4"
bytemuck = "1.14"
dashmap = "5.5"
failure = "0.1.8"
hashers = "1.0"
im = "15.1.0"
image = "0.25"
imstr = "0.2"
indexmap = "2.9"
parking_lot = "0.12"
pest = "2.8"
pest_derive = "2.8"
rand = { version = "0.9", features = ["thread_rng"] }
slab = "0.4"
smol_str = "0.2"
strum = "0.26"
strum_macros = "0.26"
uluru = "3"
uuid = "1.12"
bevy_mod_scripting_qcvm = { version = "0.1", features = ["quake1"] }
wgpu = { version = "27.0", features = ["spirv", "vulkan-portability"] }
winit = "0.29"

[features]
default = []
fast-compile = ["bevy/dynamic_linking"]
capture = ["dep:bevy_capture"]
dev_tools = ["bevy/bevy_dev_tools"]

[profile.release-lto]
inherits = "release"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package.bevy]
opt-level = 3
