[package]
name = "bevy_cmd"
version = "0.1.0"
authors = ["Eira Fransham <eira.fransham@gmail.com>"]
edition = "2024"
resolver = "2"

[dependencies]
beef.workspace = true
bevy.workspace = true
clap.workspace = true
hashbrown.workspace = true
nom.workspace = true
serde.workspace = true
serde-lexpr.workspace = true
snafu.workspace = true

[profile.dev.package.bevy]
opt-level = 3
