[package]
name = "bevy_mod_assimp"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
asset-importer.workspace = true
anyhow.workspace = true
bevy_asset.workspace = true
bevy_camera.workspace = true
bevy_color.workspace = true
bevy_ecs.workspace = true
bevy_image.workspace = true
bevy_log.workspace = true
bevy_tasks.workspace = true
bevy_scene.workspace = true
bevy_transform.workspace = true
bevy_mesh.workspace = true
bevy_render.workspace = true
bevy_pbr.workspace = true
enumflags2 = { workspace = true, features = ["serde"] }
hashbrown.workspace = true
serde.workspace = true
