[package]
name = "bevy_mod_pakfile"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Load Bevy assets from Quake 1 .pak files, with support for loading multiple and overlaying them"

[dependencies]
bevy_asset.workspace = true
bevy_app.workspace = true
bevy_log.workspace = true
bevy_tasks.workspace = true
bevy_reflect.workspace = true
byteorder.workspace = true
futures.workspace = true
memmap2.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
