[package]
name = "bevy_mod_pakfile"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/bevy_mod_pakfile"
description = "Load Bevy assets from Quake 1 .pak files, with support for loading multiple and overlaying them"

[dependencies]
bevy_asset = "0.17"
bevy_app = "0.17"
bevy_log = "0.17"
bevy_tasks = "0.17"
bevy_reflect = "0.17"
byteorder.workspace = true
futures.workspace = true
memmap2.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
