[package]
name = "bevy_mod_spr"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_ecs.workspace = true
bevy_image.workspace = true
bevy_log.workspace = true
bevy_math.workspace = true
bevy_mesh.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_scene.workspace = true
bevy_tasks.workspace = true
bevy_transform.workspace = true

bevy_mod_billboard.workspace = true
futures-byteorder.workspace = true
num-derive.workspace = true
num-traits.workspace = true
num.workspace = true
qbsp.workspace = true
seismon-utils.workspace = true
serde.workspace = true
