[package]
name = "lined"
version = "0.1.0" # remember to update README
authors = [
    "MovingtoMars <definitelynotliam@gmail.com>",
    "Michael Aaron Murphy <mmstickman@gmail.com>",
    "AdminXVII <dev.xlheureux@gmail.com>",
    "Jeremy Soller <jackpot51@gmail.com>",
    "Eira Fransham <eira.fransham@gmail.com>",
]
description = "A library offering readline-like functionality."
repository = "https://github.com/eira-fransham/lined"
homepage = "https://github.com/eira-fransham/lined"
keywords = ["readline", "line", "input", "editor", "completion"]
license = "MIT"
exclude = [
    "CONTRIBUTING.md",
    ".travis.yml",
]
edition = "2021"
resolver = "2"

[dependencies]
bytecount = "0.6"
termion = "3.0"
unicode-width = "0.1"
itertools = "0.12"
strip-ansi-escapes = "0.2"

[dev-dependencies]
regex = "1.10"
