[package]
name = "lined"
version = "0.1.0" # remember to update README
authors = [
    "MovingtoMars <definitelynotliam@gmail.com>",
    "Michael Aaron Murphy <mmstickman@gmail.com>",
    "AdminXVII <dev.xlheureux@gmail.com>",
    "Jeremy Soller <jackpot51@gmail.com>",
    "Eira Fransham <eira.fransham@gmail.com>",
]
description = "A library offering readline-like functionality."
repository = "https://github.com/eira-fransham/lined"
homepage = "https://github.com/eira-fransham/lined"
keywords = ["readline", "line", "input", "editor", "completion"]
license = "MIT"
exclude = [
    "CONTRIBUTING.md",
    ".travis.yml",
]
edition = "2024"

[dependencies]
termion.workspace = true
unicode-width.workspace = true
itertools.workspace = true
strip-ansi-escapes.workspace = true

[dev-dependencies]
regex = "1.10"
