[package]
name = "seismon-utils"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
beef.workspace = true
bitflags.workspace = true
bevy_reflect.workspace = true
bevy_math.workspace = true
byteorder.workspace = true
futures.workspace = true
futures-byteorder.workspace = true
nom.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
